SAK-24819 Block multiple submissions in forums

--- a/msgcntr/msgcntr-2.8.x-features-backport/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/msgcntr-2.8.x-features-backport/messageforums-app/src/webapp/css/msgcntr.css
@@ -587,3 +587,15 @@ img.authorImage {
 .profile2-profile-content{
 	width: 270px !important;
 }
+
+#buttonBlocker,.buttonBlocker {
+    z-index:2;
+    display:none;
+    padding:0 8px;
+    background: transparent url(../images/trans.gif) top left repeat;
+    opacity:0;
+    position:absolute
+}
+#buttonBlocker:hover, .buttonBlocker:hover {
+    cursor:progress;
+}
