--- a/melete/melete-2.8.2_sak29x_features-backport/melete-app/src/webapp/rtbc004.css
+++ b/melete/melete-2.8.2_sak29x_features-backport/melete-app/src/webapp/rtbc004.css
@@ -1,7 +1,7 @@
 
 .actionBar   		{	background: #EEEEEE;
 						border: 0px none black;
-						margin: 5px 0 0 0;
+						margin: 5px 0 20px;
 						line-height: 2em;
 						padding-left: 1em;
 					}
