--- a/portal/portal-2.9.x_features-backport/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
+++ b/portal/portal-2.9.x_features-backport/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
@@ -130,7 +130,17 @@ ${responseHead}
   #if ( $loggedIn ) 
     <li class="logoutLink"><span><a href="${portalTopUrl}?force.logout=yes">$rloader.getString("pda_logout")</a></span></li>
   #else
-    <li class="loginLink"><span><a href="${portalTopUrl}?force.login=yes">$rloader.getString("pda_login")</a></span></li>
+
+    <!-- xportal -->
+    <li class="loginLink">
+       <div> 
+           <span><a href="${portalTopUrl}?force.login=yes">$rloader.getString("pda_login")</a></span>
+           #if (${loginHasLogInOutUrl2})
+           </li><li class="loginLink"><span><a href="${loginLogInOutUrl2Pda}" title="${loginMessage2}">${loginMessage2}</a></span>
+           #end
+       </div> 
+    </li>
+
   #end
   <!-- End Mobile Small Display -->
 #else
@@ -147,8 +157,15 @@ ${responseHead}
 			## need to get string from bundle
 	    <li class="logoutLink"><span><a href="${portalTopUrl}?force.logout=yes">$rloader.getString("pda_logout")</a></span></li>
 	  #else
-			## need to get string from bundle
-	    <li class="loginLink"><span><a href="${portalTopUrl}?force.login=yes">$rloader.getString("pda_login")</a></span></li>
+       <!-- xportal -->
+       <li class="loginLink">
+       <div>
+           <span><a href="${portalTopUrl}?force.login=yes">$rloader.getString("pda_login")</a></span>
+           #if (${loginHasLogInOutUrl2})
+           </li><li class="loginLink"><span><a href="${loginLogInOutUrl2Pda}" title="${loginMessage2}">${loginMessage2}</a></span>
+           #end
+           </div> 
+        </li>
 	  #end
   </li>
 #end
