Backport of SAK-22384

--- a/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-addRemoveFeatureConfirm.vm
+++ b/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-addRemoveFeatureConfirm.vm
@@ -149,6 +149,14 @@
 			<br />
 		#end
 	</p>
+	
+	## SAK-22384
+	#if($!isMathJaxInstalled && $!doEnableMathJax)
+	<p class="instruction">
+		$tlang.getString("sinfo.mathjax.confirmEnabled") $confirmMathJaxEnabledTools   
+	</p>
+	#end
+
 	<form name="addRemoveFeaturnConfirmForm" id="addRemoveFeaturnConfirmForm" action="#toolForm("$action")" method="post">
 		<input type="hidden" name="cancelIndex" value="$continueIndex" />
 		<input type="hidden" name="back" value="$!backIndex" />
