--- a/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfoConfirm.vm
+++ b/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfoConfirm.vm
@@ -191,6 +191,20 @@
 					#end
 				</td>					
 			</tr>
+            #if ($isMathJaxInstalled)
+            <tr>
+                <th>
+                    $tlang.getString("sinfo.mathjax.name")
+                </th>
+                <td>
+                #if ($isMathJaxAllowedInSite)
+                    $tlang.getString("sinfo.mathjax.allowed")
+                #else
+                    $tlang.getString("sinfo.mathjax.notAllowed")
+                #end
+                <td>
+            </tr>
+            #end
 		</table>
 		<input type="hidden" name="back" value="$!backIndex" />
 		<input type="hidden" name="templateIndex" value="$!templateIndex" />
