SAK-25867 Improvements to Site Archive tool

--- a/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/webapp/css/site-manage.css
+++ b/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/webapp/css/site-manage.css
@@ -17,7 +17,7 @@ toggler needs
     border-top: none;
     padding: .5em
 }
-#templateSettings, #siteTypeList{
+#templateSettings, #siteTypeList, #archiveSettings{
 	padding:.5em;
 	background:#eee;
 	width:50em;
