--- a/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/webapp/css/site-manage.css
+++ b/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/webapp/css/site-manage.css
@@ -17,7 +17,7 @@ toggler needs
     border-top: none;
     padding: .5em
 }
-#templateSettings, #siteTypeList{
+#templateSettings, #siteTypeList, #archiveSettings{
 	padding:.5em;
 	background:#eee;
 	width:50em;
