--- a/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
+++ b/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteConfirm.vm
@@ -268,7 +268,21 @@
 							$description
 						#end						
 					</td>
-			</tr>	
+			</tr>
+			#if ($fromArchive)
+				<tr>
+					<th>
+						$tlang.getString("archive.createsite.confirm")
+					</th>
+					<td>					
+						#if ($fromArchive =="")
+							<span class="instruction">$tlang.getString("archive.createsite.confirm.none")</span>
+						#else	
+							$fromArchive
+						#end						
+					</td>
+				</tr>
+			#end
 		</table>	
 		<input type="hidden" name="back" value="$!backIndex" />
 		<input type="hidden" name="templateIndex" value="$!templateIndex" />
