--- a/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-duplicate.vm
+++ b/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-duplicate.vm
@@ -29,7 +29,7 @@
 									<label for="selectTerm">
 										$tlang.getString("sitetype.acater")
 									</label>	
-									<select name="selectTerm" id="selectTerm" onchange="javascript:selectCourseType();">
+									<select name="selectTerm" id="selectTerm">
 										#foreach($term in $termList)
 											<option value ="$term.eid"
 												#if ($!currentTermId)
