--- a/assignment/assignment-2.9.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
+++ b/assignment/assignment-2.9.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
@@ -486,7 +486,7 @@ $(document).ready(function() {
 		#end
 			<div class="longtext">
 				<label for="new_assignment_instructions" class="block">
-					$tlang.getString("gen.assinf")
+					<span class="reqStar">*</span> $tlang.getString("gen.assinf")
 				</label>
 				<table border="0" style="margin:0"><tr><td>
 					<textarea name="$name_Description" id="$name_Description" cols="80" rows="30" wrap="virtual">$validator.escapeHtmlFormattedTextarea($value_Description)</textarea>
@@ -829,7 +829,7 @@ $(document).ready(function() {
 								#elseif($!gradebookAssignmentsSelectedDisabled.get($gaId).equals("selected")) 
 									selected="selected"
 								#end>
-									$!gradebookAssignmentsLabel.get($gaId)
+									$validator.escapeHtml($!gradebookAssignmentsLabel.get($gaId))
 							</option>
 						#end
 					</select>
